fix overlaps

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,4 @@
 /* INDEX */
-.header-image {
-  width: 100%;
-  height: 300px;
-}
 .page-description {
   font-size: 20px;
   padding: 20px;
