--- a/css/nav.css
+++ b/css/nav.css
@@ -2,6 +2,10 @@
 ol li{
   display: inline;
 }
+.header-image {
+  width: 100%;
+  max-height: 250px;
+}
 /* Nav Bar*/
 .nav-header {
   font-size: 18px;
@@ -9,6 +13,7 @@ ol li{
   background-color: #897DF4;
   color: #ffffff;
   padding: 15px;
+  height: 80px;
 }
 .nav-header img {
   height: 70px;
@@ -19,7 +24,9 @@ ol li{
   opacity: .5;
 }
 .nav-header a {
+  color: #ffffff;
   padding-left: 15px;
+  border-radius: 25px;
 }
 @media screen and (max-width: 450px){
   .nav-header img {
@@ -34,7 +41,7 @@ ol li{
 .share-buttons{
   position: absolute;
   z-index: 10;
-  top: 230px;
+  top: 180px;
   right: 20px;
 }
 
