--- a/css/tarot.css
+++ b/css/tarot.css
@@ -1,19 +1,32 @@
+.kickstarter-banner {
+  background-color: #ff99cc;
+  width: 90%;
+  border-style: solid;
+  border-width: 2px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+.tarot-sub-nav {
+  height: 40px;
+}
+.tarot h4 {
+  font-size: 18px;
+}
 .tarot p {
   font-size: 16px;
   line-height: 1.5;
 }
-
 .teaser-image {
   max-width: 500px;
   height: auto;
 }
 
 .left-column {
-  width: 50%;
+  width: 45%;
   float: left
 }
 .right-column {
-  width: 50%;
+  width: 45%;
   float: right;
 }
 .columns {
@@ -23,10 +36,10 @@
   display: block;
 }
 .columns div {
-  padding: 0;
+  padding: 10px;
 }
 .columns img {
-  max-width: 100%;
+  max-width: 90%;
   max-height: 480px;;
   height: auto;
   padding-top: 10px;
@@ -48,23 +61,23 @@
   width: 400px;
 }
 
-.kickstarter-banner {
-  background-color: #ff99cc;
-  width: 90%;
-  border-style: solid;
-  border-width: 2px;
-  padding-left: 5%;
-  padding-right: 5%;
+#bottom-signup {
+  height: 100px;
+}
+#top-signup {
+  height: 100px;
 }
 
 #mc-embedded-subscribe {
   height: 50px;
   width: 100px;
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   background-color: #87C9F2;
 }
 #mc_embed_signup_scroll p {
   font-size: 20px;
+  height: 100px;
+  padding-bottom: 20px;
 }
